# apartment-renter

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/actions/build-application/: action.yml
.github/workflows/: lint.yml  workflow.yml
src/: runner.py  runner_builder.py  runner_inference.py
src/config/: __init__.py  db_config.py  logger_config.py  model_config.py
src/db/: db.sqlite  db_model.py
src/model/: model_builder.py  model_inference.py  model_service.py
src/model/notebooks/: Untitled.ipynb
src/model/pipeline/: collection.py  model.py  preparation.py
